# grpc_bidirectional_server

./: CMakeLists.txt  Dockerfile  Dockerfile_vcpkg  knative_service.yaml
ProtoApi/: CMakeLists.txt  SampleService.proto
ProtoApi/protobuf/: Sample.proto
SampleService/: CMakeLists.txt
SampleService/inc/: SampleDomainService.h  SampleServiceImpl.h
SampleService/src/: SampleDomainService.cpp  SampleServiceImpl.cpp  main.cpp
